--- a/debian/opswat-mdicapsrv/Dockerfile
+++ b/debian/opswat-mdicapsrv/Dockerfile
@@ -150,8 +150,8 @@ RUN apt-get install --no-install-recommends --no-install-suggests -y \
                         jq  \
                         tcpdump \
                         apt-utils && \
-    dpkg-deb -x /mdicapsrv-feature_http_protocol_for_nginx_module.deb ${INSTALL_ROOT} && \
     rm -f /mdicapsrv-feature_http_protocol_for_nginx_module.deb
+    # dpkg-deb -x /mdicapsrv-feature_http_protocol_for_nginx_module.deb ${INSTALL_ROOT} && \
     # dpkg -i -x ${INSTALL_ROOT}/mdicapsrv-feature_http_protocol_for_nginx_module.deb
 
 # Patch for running with non-root user
