--- a/debian/opswat-mdicapsrv/Dockerfile
+++ b/debian/opswat-mdicapsrv/Dockerfile
@@ -150,9 +150,9 @@ RUN apt-get install --no-install-recommends --no-install-suggests -y \
                         jq  \
                         tcpdump \
                         apt-utils && \
+    dpkg -i /mdicapsrv-feature_http_protocol_for_nginx_module.deb && \
     rm -f /mdicapsrv-feature_http_protocol_for_nginx_module.deb
-    # dpkg-deb -x /mdicapsrv-feature_http_protocol_for_nginx_module.deb ${INSTALL_ROOT} && \
-    # dpkg -i -x ${INSTALL_ROOT}/mdicapsrv-feature_http_protocol_for_nginx_module.deb
+    # dpkg-deb -x /mdicapsrv-feature_http_protocol_for_nginx_module.deb ${INSTALL_ROOT}
 
 # Patch for running with non-root user
 RUN chmod 755 ${WORK_DIR}/patch.sh && \
