--- a/debian/nginx-opswat/Dockerfile
+++ b/debian/nginx-opswat/Dockerfile
@@ -60,7 +60,7 @@ RUN --mount=type=secret,id=nginx-crt,dst=nginx-repo.crt \
         # nginx-plus-module-image-filter=${NGINX_VERSION}-${PKG_RELEASE} \
         # nginx-plus-module-perl \
         # nginx-plus-module-perl=${NGINX_VERSION}-${PKG_RELEASE} \
-        # nginx-plus-module-njs \
+        nginx-plus-module-njs \
         # nginx-plus-module-njs=${NGINX_VERSION}+${NJS_VERSION}-${PKG_RELEASE} \
     " \
     && echo "Acquire::https::pkgs.nginx.com::Verify-Peer \"true\";" > /etc/apt/apt.conf.d/90nginx \
