--- a/debian/nginx-opswat/Dockerfile
+++ b/debian/nginx-opswat/Dockerfile
@@ -5,9 +5,9 @@ LABEL maintainer="NGINX Docker Maintainers <docker-maint@nginx.com>"
 # Define NGINX versions for NGINX Plus and NGINX Plus modules
 # Uncomment this block and the versioned nginxPackages block in the main RUN
 # instruction to install a specific release
-# ENV NGINX_VERSION   27
+ENV NGINX_VERSION   27
 # ENV NJS_VERSION     0.7.4
-# ENV PKG_RELEASE     1~bullseye
+ENV PKG_RELEASE     2~bullseye
 
 # Download certificate and key from the customer portal (https://account.f5.com)
 # and copy to the build context
@@ -50,8 +50,8 @@ RUN --mount=type=secret,id=nginx-crt,dst=nginx-repo.crt \
 # Uncomment individual modules if necessary
 # Use versioned packages over defaults to specify a release
     && nginxPackages=" \
-        nginx-plus \
-        # nginx-plus=${NGINX_VERSION}-${PKG_RELEASE} \
+        # nginx-plus \
+        nginx-plus=${NGINX_VERSION}-${PKG_RELEASE} \
         # nginx-plus-module-xslt \
         # nginx-plus-module-xslt=${NGINX_VERSION}-${PKG_RELEASE} \
         # nginx-plus-module-geoip \
